# util-RetrieveEditRerank-NMT

./: README.md  pyproject.toml
util-NeuralBoW/: 01.preprocess_NeuralBoW.sh  02.subword.sh  03.NeuralBoW.sh  04.subword_for_output.sh  05.tojson.sh
util-orig/: 00.tokenize.sh  01.div_100K.sh  01.div_1M.sh  02.subword.sh  02.subword_100K.sh  03.tojson.sh
util-retrieve/: 01.cal-emb.sh  02.search_by_faiss.sh  03.merge.sh  04.subword.sh  06.div_sim100.sh
util-retrieve_ed_ftakanashi/: 01.retrieve_ed.sh  03.merge_all_match.py  03.merge_all_match.sh  04.subword.sh  06.div_sim.sh  06.div_sim100.sh
