[tool.poetry]
name = "util-retrieveeditrerank-nmt"
version = "0.1.0"
description = ""
authors = ["futuran <takuya.kudryavka@gmail.com>"]
readme = "README.md"
packages = [{include = "util_retrieveeditrerank_nmt"}]

[tool.poetry.dependencies]
python = "^3.10"
subword-nmt = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
